fixed weird nav bar scrolling on mobile and sped up transition

--- a/navbar.css
+++ b/navbar.css
@@ -112,11 +112,11 @@ nav a:hover {
   /* color: #fff; */
 }
 
-.nav-toggle:checked ~ nav {
+.nav-toggle.active ~ nav {
   transform: scale(1, 1);
 }
 
-.nav-toggle:checked ~ nav a {
+.nav-toggle.active ~ nav a {
   opacity: 1;
   transition: opacity 250ms ease-in-out 250ms;
 }
